--- a/Flickster/app/src/main/res/layout/activity_movie.xml
+++ b/Flickster/app/src/main/res/layout/activity_movie.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
     android:paddingTop="10dp"
-    android:background="#191919"
+
     tools:context="com.example.akshayb.flickster.MovieActivity">
 
     <android.support.v4.widget.SwipeRefreshLayout
@@ -17,9 +17,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
+        <!-- android:background="#191919" -->
+
         <ListView
             android:layout_width="match_parent"
-            android:background="#191919"
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
