--- a/Flickster/app/src/main/res/values/styles.xml
+++ b/Flickster/app/src/main/res/values/styles.xml
@@ -1,11 +1,41 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:background">@color/colorRangoonGreen</item>
+        <item name="android:listViewStyle">@style/Widget.ListView.Custom</item>
     </style>
+
+    <!-- This is the custom textview styles for this application -->
+    <style name="Widget.ListView.Custom" parent="android:Widget.ListView">
+        <item name="android:background">@color/colorRangoonGreen</item>
+    </style>
+
+
+    <!-- This is the custom styles for font sizes and colors -->
+    <style name="LargeFont">
+        <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
+    </style>
+
+    <style name="LargeFont.SeaShellColor">
+        <item name="android:textColor">#FEFEFE</item>
+    </style>
+
+
+    <style name="RegularFont">
+    </style>
+
+    <style name="RangoonGreenColor">
+        <item name="android:color">#191919</item>
+    </style>
+
+    <style name="RegularFont.StackColor">
+        <item name="android:textColor">#8E8E8E</item>
+    </style>
+
 
 </resources>
