detail activity works with title, release date, stars and synopsis

--- a/Flickster/app/src/main/res/layout/activity_movie.xml
+++ b/Flickster/app/src/main/res/layout/activity_movie.xml
@@ -9,7 +9,7 @@
     android:paddingRight="10dp"
     android:paddingTop="10dp"
 
-    tools:context="com.example.akshayb.flickster.MovieActivity">
+    tools:context="com.example.akshayb.flickster.activities.MovieActivity">
 
     <android.support.v4.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
