--- a/Flickster/app/src/main/res/values/colors.xml
+++ b/Flickster/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorRangoonGreen">#191919</color>
+    <color name="colorSeaShell">#FEFEFE</color>
+    <color name="colorStack">#8E8E8E</color>
 </resources>
