--- a/Flickster/app/src/main/res/layout/item_movie_portrait.xml
+++ b/Flickster/app/src/main/res/layout/item_movie_portrait.xml
@@ -18,21 +18,17 @@
         android:layout_marginTop="24dp"
         android:id="@+id/ivMovieImage" />
 
-    <!--   android:textColor="#FEFEFE" -->
-    <!-- android:textAppearance="?android:attr/textAppearanceLarge" -->
-
     <TextView
         tools:text="Doctor Strange"
         style="@style/LargeFont.SeaShellColor"
         android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvTitle"
         android:layout_alignTop="@+id/ivMovieImage"
         android:layout_toRightOf="@+id/ivMovieImage"
         android:layout_toEndOf="@+id/ivMovieImage" />
-
-    <!-- android:textColor="#8E8E8E" -->
 
     <TextView
         tools:text="After his career is destroyed, a brilliant but arrogant surgeon gets a new lease on life when a sorcerer takes him under his wing and trains him to defend the world against evil."
